[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "poseidon-rna"
authors = [
    {name="Adam Sychla"},
]
description = "Plotting RNA using Kamada-Kawai Graph Plotting Algorithm"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "GPL-3.0-only"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "networkx>=3.3",
    "matplotlib>=3.8.4",
    "seaborn>=0.13.2",
    "numpy>=1.26.4",
]
dynamic = ["version"]

[tool.hatch.build.targets.sdist]
exclude = [
  "/.test",
]

[tool.hatch.build.targets.wheel]
packages = ["src/poseidonrna"]

[tool.hatch.version]
path = "src/poseidonrna/__init__.py"

[project.urls]
"Homepage" = "https://github.com/rouskinlab/poseidon-rna"
"Bug Tracker" = "https://github.com/rouskinlab/poseidon-rna/issues"
